# kAIxU

./: .gitattributes  .gitignore  ENV.template  README.md  SKYE INTRO (3).html  UPGRADE_MASTER_TODO.md  index.html  netlify.toml  wrangler.jsonc
DEV ONLY/: Implementation Directives  ideas  updates
DevProofx/: app.js  diffs.txt  index.html  netlify.toml  package.json  readme.md
Gate/: index.html
KaixuMagicPhotoEditor/: index.html  manifest.json
NeuralSpacePro/: index.html
SoleSheets:LoginSystem/: README.md  README_QUICKSETUP.txt  index.html  package.json  protected.html
db/: schema.sql
docs/: openapi.yaml
exports/: kAIxUxnth0s.tar
kAIxU-Brain/: .dev.vars.template  CLIENT_HANDOFF_CHECKLIST.md  ENV.template  README.md  package-lock.json  package.json  smokehouse-standalone.html  wrangler.toml
kAIxU-S0L-Core-Brain/: .dev.vars.template  CLIENT_HANDOFF_CHECKLIST.md  README.md  package.json  wrangler.toml
public/: InnerSanctum.html  Intro.html  SKYE INTRO (3).html  TriviaGo.html  _headers  adKai.html  adminKai.html  background.html  bioKai.html  briefKai.html  captionKai.html  caseKai.html  changelogKai.html  cheatKai.html  codeKai.html  coldKai.html  contractKai.html  coverKai.html  debugKai.html  deckKai.html  diagramKai.html  flashKai.html  gateway.html  goalKai.html  habitKai.html  index.html  introSkipKai.html  invoiceKai.html  jobKai.html  journalKai.html  kAIxUchat.html  landingKai.html  legalKai.html  liveModeKai.html  mailKai.html  manifest.json  mapKai.html  mathKai.html  (+39 more)
sdk/python/: pyproject.toml
sdk/python/kaixu/: __init__.py  client.py
(+119 files in other folders)
